welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: type mismatch;
 found   : Unit
 required: Int
                                         else if ((tea>4)&&(candy>4)) {if ((tea>(2*candy))||(candy>(2*tea))) return 2}
                                                                       ^